# chain-fusion-signer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  HACKING.md  PRICING.md  README.md  RELEASE.md  canister_ids.json  check-pricing.beta.2026-03-02T13:12:44+01:00.jsonl  check-pricing.report.md  dev-tools.json  dfx.json  fees.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.cargo/: audit.toml
.config/: spellcheck.dic
.github/: CODEOWNERS  dependabot.yml
.github/actions/bindings/: action.yaml
.github/actions/format/: action.yaml
.github/repo_policies/: BOT_APPROVED_FILES
.github/workflows/: bump-version.yml  check.yml  deploy-staging.yml  integration.yml  pr.yml  prepare-proposal.yml  release.yml  reproducible-native.yaml  reproducible.yaml  security-audit.yaml  tag-release.yml
examples/solana/: Cargo.toml  README.md
examples/solana/examples/: solana.rs
init/: bitcoin
scripts/: bind.sh  build-did  build.cycles_depositor.sh  build.signer.args.sh  build.signer.report.sh  build.signer.sh  build.upgrade.args.sh  cargo-packages  check-pricing  clap.bash  commit-metadata  did.sh  doc  doc-rs  docker-build  docker-build.pre  docker-build.report  docker-hashes  fmt  fmt-json  fmt-rs  lint-sh  proposal-assets  proposal-assets.test  proposal-template  proposal-template.test  proposal-template.test.proposal.md  proposal-template.test.proposal.txt  proposal-template.test.rollback.md  proposal-template.test.rollback.txt  propose  release  report  setup  setup-cargo-binstall  setup-rust  setup-solana  test-rs  test.backend.sh  test.signer.sh  (+1 more)
scripts/bind/: pic.sh
scripts/bind/pic/: bitcoin.sh  bitcoin.toml  cycles_depositor.hbs  cycles_depositor.sh  cycles_depositor.toml  cycles_ledger.sh  cycles_ledger.toml  signer.sh  signer.toml  template.hbs
scripts/deploy/: propose
scripts/pic/: cycles_depositor.hbs
src/declarations/example-backend/: index.d.ts  index.js
src/declarations/example-frontend/: index.d.ts  index.js
src/declarations/example_backend/: example_backend.did.d.ts  index.d.ts  index.js
src/declarations/example_frontend/: example_frontend.did.d.ts  index.d.ts  index.js
src/declarations/ic-chainfusion-signer/: ic-chainfusion-signer.did.d.ts  ic-chainfusion-signer.did.js  index.d.ts  index.js
src/declarations/internet_identity/: index.js  internet_identity.did.d.ts
src/example-backend/: Cargo.toml
src/example-backend/src/: lib.rs
src/example-frontend/: package.json  vite.config.js
src/example-frontend/src/: App.js
src/example_backend/: Cargo.toml
src/example_backend/src/: lib.rs
src/example_frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/example_frontend/src/: App.js  index.scss
src/ic-chainfusion-signer/: Cargo.toml  backend.did  ic-chainfusion-signer.did
src/ic-chainfusion-signer/src/: guards.rs  impls.rs  lib.rs  types.rs
src/ic-chainfusion-signer/tests/it/: main.rs
src/ic-chainfusion-signer/tests/it/upgrade/: credentials_init_args.rs
src/ic-chainfusion-signer/tests/it/utils/: mock.rs  mod.rs  pocketic.rs
src/papi/api/: Cargo.toml
src/papi/cycles_ledger_client/: Cargo.toml
src/papi/guard/: Cargo.toml
src/shared/: Cargo.toml
src/shared/src/: impls.rs  types.rs
src/signer/: Cargo.toml  signer.did
src/signer/api/: Cargo.toml
src/signer/api/src/: backend_api.rs  impls.rs  lib.rs  methods.rs  metrics.rs  std_canister_status.rs  types.rs
src/signer/api/src/types/: eth.rs  generic.rs  schnorr.rs
src/signer/canister/: Cargo.toml  signer.did
src/signer/canister/src/: convert.rs  derivation_path.rs  guards.rs  impls.rs  lib.rs  state.rs  types.rs
src/signer/canister/src/migrate/: steps.rs
src/signer/canister/src/sign/: ecdsa_api.rs  ecdsa_utils.rs  eth.rs  generic.rs  mod.rs
src/signer/canister/src/sign/bitcoin/: bitcoin_api.rs  bitcoin_utils.rs  fee_utils.rs  mod.rs  tx_utils.rs
src/signer/canister/src/sign/eth/: eth_types.rs
src/signer/canister/src/sign/generic/: error.rs
src/signer/canister/tests/it/: address.rs  bitcoin.rs  eth.rs  generic.rs  guard.rs  main.rs  schnorr.rs  sign.rs
src/signer/canister/tests/it/canister/: bitcoin.rs  cycles_depositor.rs  cycles_ledger.rs  mod.rs  signer.rs
src/signer/canister/tests/it/canister/cycles_ledger/: impls.rs
src/signer/canister/tests/it/upgrade/: credentials_init_args.rs  impls.rs  token_enabled.rs  token_version.rs  types.rs
src/signer/canister/tests/it/utils/: cycles_depositor.rs  cycles_ledger.rs  mock.rs  mod.rs  pic_canister.rs  pocketic.rs  signer.rs  test_environment.rs
src/signer/cli/: Cargo.toml
src/signer/cli/src/: args.rs  lib.rs  logger.rs  main.rs
src/signer/src/: bitcoin_api.rs  convert.rs  derivation_path.rs  lib.rs  state.rs  types.rs
src/signer/src/sign/: btc.rs  eth.rs  mod.rs
src/signer/src/sign/bitcoin/: bitcoin_api.rs  bitcoin_utils.rs  mod.rs
src/signer/tests/it/: address.rs  main.rs  sign.rs
src/signer/tests/it/utils/: mock.rs  pocketic.rs
src/solana/cli/: Cargo.toml
src/solana/cli/src/: ic.rs  main.rs
