[workspace]
members = [
    "src/example_backend",
    "src/signer/api",
    "src/signer/canister"]
resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
ic-cdk = "0.18.7"
ic-cdk-macros = "0.18.7"
ic-stable-structures = "0.6.9"
ic-metrics-encoder = "1.1.1"
ic-canister-sig-creation = "1.3.0"
candid = "0.10.19"
ethers-core = "= 2.0.11"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
k256 = "0.13"
lazy_static = "1.5.0"
pocket-ic = "9.0.2"
pretty_assertions = "1.4.1"
bitcoin = "0.32.7"
strum = "0.26.3"
strum_macros = "0.26.4"
ic-chain-fusion-signer-api = { path = "src/signer/api" }
ic-papi-api = { path = "/home/apollo/git/dfinity/others/papi/src/api" }
ic-papi-guard = { path = "/home/apollo/git/dfinity/others/papi/src/guard" }
ed25519-dalek = "2.2.0"
signature = "2.2"

# START papi dependencies
ic-ledger-types = "0.15.0"
cycles-ledger-client = { path = "/home/apollo/git/dfinity/others/papi/src/declarations/cycles_ledger" }
# END papi dependencies
