[workspace]
members = [
    "src/example_backend",
    "src/signer/api",
    "src/signer/canister"]
resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.18.3"
ic-stable-structures = "0.6.9"
ic-metrics-encoder = "1.1.1"
ic-canister-sig-creation = "1.3.0"
candid = "0.10.23"
ethers-core = "= 2.0.14"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
k256 = "0.13"
lazy_static = "1.5.0"
pocket-ic = "9.0.2"
pretty_assertions = "1.4.1"
bitcoin = "0.32.8"
strum = "0.26.3"
strum_macros = "0.27.2"
ic-chain-fusion-signer-api = { path = "src/signer/api" }
ic-papi-api = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
ic-papi-guard = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
ed25519-dalek = "2.2.0"
signature = "2.2"

# START papi dependencies
ic-ledger-types = "0.13.0"
cycles-ledger-client = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
# END papi dependencies
