[workspace]
members = [
    "src/example_backend",
    "src/signer/api",
    "src/signer/canister"]
resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
ic-cdk = "0.20.0"
ic-cdk-management-canister = "0.1.1"
ic-cdk-bitcoin-canister = "0.2.0"
ic-stable-structures = "0.7.2"
ic-metrics-encoder = "1.1.1"
ic-canister-sig-creation = "1.3.1"
candid = "0.10.29"
ethers-core = "= 2.0.14"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
k256 = "0.13"
lazy_static = "1.5.0"
pocket-ic = "13.0.0"
pretty_assertions = "1.4.1"
bitcoin = "0.32.9"
strum = "0.28.0"
strum_macros = "0.28.0"
ic-chain-fusion-signer-api = { path = "src/signer/api" }
ic-papi-api = { git = "https://github.com/dfinity/papi", rev = "a102b459e2a7ab17de247ab68025428ea68c12e5" }
ic-papi-guard = { git = "https://github.com/dfinity/papi", rev = "a102b459e2a7ab17de247ab68025428ea68c12e5" }
ed25519-dalek = "2.2.0"
signature = "2.2"

# START papi dependencies
ic-ledger-types = "0.16.0"
ic-cycles-ledger-client = { git = "https://github.com/dfinity/papi", rev = "a102b459e2a7ab17de247ab68025428ea68c12e5" }
# END papi dependencies
