[package]
name = "signer"
version = "0.2.4"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { workspace = true }
candid = { workspace = true }
ethers-core = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-chain-fusion-signer-api = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
ic-stable-structures = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
pocket-ic = { workspace = true }
