[package]
name = "signer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ['rt'] }
dfx-core = {workspace = true}
slog = {workspace = true}
slog-term = {workspace = true}
slog-async = {workspace = true}
anyhow = {workspace = true}
candid = {workspace = true}